--- a/index.html
+++ b/index.html
@@ -1,17 +1,265 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Biker Zone Website</title>
     <link rel="stylesheet" href="styles/style.css">
+    <!-- font awesome link  -->
+    <script src="https://kit.fontawesome.com/b662e3a97a.js" crossorigin="anonymous"></script>
     <!-- bootstrap css link  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
+
+<body>
+    <header>
+        <!-- navbar section  -->
+        <section class="container-lg">
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                    <h1 class="">Biker Zone</h1>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-semibold">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Shop</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">News</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">contact</a>
+                            </li>
+                        </ul>
+                        <button class="btn btn-outline-success ms-5" type="submit">Login</button>
+                    </div>
+                </div>
+            </nav>
+        </section>
+        <!-- biker slider section  -->
+        <section class="container-lg">
+            <div id="carouselExampleControls" class="carousel slide bg-danger bg-opacity-10 p-5 rounded"
+                data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row">
+                            <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+                                <div>
+                                    <h1>Honda CBR 300R
+                                    </h1>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua
+                                        dolor do amet sint. Velit officia consequat duis enim velit
+                                        mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                                    <button class="btn btn-danger">Purchase</button>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <img src="images/bike-1.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+                                <div>
+                                    <h1>Honda CBR 300R
+                                    </h1>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua
+                                        dolor do amet sint. Velit officia consequat duis enim velit
+                                        mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                                    <button class="btn btn-danger">Purchase</button>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <img src="images/bike-2.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+                                <div>
+                                    <h1>Honda CBR 300R
+                                    </h1>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua
+                                        dolor do amet sint. Velit officia consequat duis enim velit
+                                        mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                                    <button class="btn btn-danger">Purchase</button>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <img src="images/bike-3.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon bz-icon-color" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon bz-icon-color" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </header>
+    <main>
+        <!-- Futures Bikes In This Year section  -->
+        <section class="container-lg text-md-center text-center mt-5">
+            <h1>Futures Bikes In This Year</h1>
+            <p class="text-danger">Best bike collection</p>
+            <hr class="w-25 mx-auto boder-danger">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 mt-3 p-3">
+                <div class="col">
+                    <img class="w-100" src="images/feature-bike.jpg" alt="">
+                </div>
+                <div class="col">
+                    <img class="w-75" src="images/feature-bike.jpg" alt="">
+                </div>
+                <div class="col">
+                    <img class="w-100" src="images/feature-bike.jpg" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- latest News section  -->
+        <section class="container-lg">
+            <h1 class="text-center my-5">latest News</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100 p-3">
+                        <img src="images/bike-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Ducati XDIAVEL S-73</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer">
+                            <button class="btn btn-danger">Purchase</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col rounded-5">
+                    <div class="card h-100 p-3">
+                        <img src="images/bike-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Motorcycles & Scooters</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, quae.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <button class="btn btn-outline-danger">Purchase</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col rounded-5">
+                    <div class="card h-100 p-3">
+                        <img src="images/bike-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">2021 Honda CBR500R</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="card-footer">
+                            <button class="btn btn-outline-danger">Purchase</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Happy Clients says section  -->
+        <section class="container-lg">
+            <h1 class="text-center my-5">Happy <span class="text-danger">Clients says</span></h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col d-flex align-items-center justify-content-center text-center">
+                    <div class="card h-100 p-5">
+                        <img src="images/user-1.png" class="card-img-top m-auto w-50 mb-5" alt="...">
+                        <p>Slate helps you see how
+
+                            many more days you need
+
+                            to work to reach your financial
+
+                            goal for the month and year</p>
+                        <div>
+                            <i class="fa-solid fa-star text-danger"></i>
+                            <i class="fa-solid fa-star text-danger"></i>
+                            <i class="fa-solid fa-star text-danger"></i>
+                            <i class="fa-solid fa-star text-danger"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <p class="text-primary fw-semibold mt-3" >Regina Miles</p>
+                        <p class="fw-bold">Banker</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-center justify-content-center text-center">
+                    <div class="card h-100 p-5">
+                        <img src="images/user-2.png" class="card-img-top m-auto w-50 mb-5" alt="...">
+                        <p>Slate helps you see how
+
+                            many more days you need
+
+                            to work to reach your financial
+
+                            goal for the month and year</p>
+                        <div>
+                            <i class="fa-solid fa-star text-danger"></i>
+                            <i class="fa-solid fa-star text-danger"></i>
+                            <i class="fa-solid fa-star text-danger"></i>
+                            <i class="fa-solid fa-star text-danger"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <p class="text-primary fw-semibold mt-3" >Regina Miles</p>
+                        <p class="fw-bold">Banker</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-center justify-content-center text-center">
+                    <div class="card h-100 p-5">
+                        <img src="images/user-3.png" class="card-img-top m-auto w-50 mb-5" alt="...">
+                        <p>Slate helps you see how
+
+                            many more days you need
+
+                            to work to reach your financial
+
+                            goal for the month and year</p>
+                        <div>
+                            <i class="fa-solid fa-star text-danger"></i>
+                            <i class="fa-solid fa-star text-danger"></i>
+                            <i class="fa-solid fa-star text-danger"></i>
+                            <i class="fa-solid fa-star text-danger"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <p class="text-primary fw-semibold mt-3" >Regina Miles</p>
+                        <p class="fw-bold">Banker</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Frequently Asked Questions section  -->
+        <section class="container mt-5 py-5 rounded">
+            <h1 class="text-center my-5">Frequently Asked <span class="text-danger">Questions</span></h1>
+        </section>
+    </main>
+    <footer></footer>
 
     <!-- bootstrap js link  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
