footer and all section complete

--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
         <!-- Frequently Asked Questions section  -->
         <section class="container mt-5 py-5 bg-light rounded">
             <h1 class="text-center my-5">Frequently Asked <span class="text-danger">Questions</span></h1>
-            <div class="row row-cols-1 row-md-cols-2 p-5 g-4">
-                <div class="col">
+            <div class="row p-5 g-4">
+                <div class="col-sm-12 col-md-6">
                     <img class="img-fluid" src="images/faq.png" alt="">
                 </div>
-                <div class="col">
+                <div class="col-sm-12 col-md-6">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="headingOne">
@@ -300,7 +300,34 @@
 
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="container-lg">
+            <div class="row g-5">
+                <div class="col-sm-12 col-md-6">
+                    <div class="p-2 nav">
+                        <a class="nav-link text-white" href="">Download Now</a>
+                        <a class="nav-link text-white" href="">License</a>
+                    </div>
+                    <div class="p-2 nav">
+                        <a class="nav-link text-white" href="">About</a>
+                        <a class="nav-link text-white" href="">Features</a>
+                        <a class="nav-link text-white" href="">Pricing</a>
+                        
+                        <a class="nav-link text-white" href="">Help</a>
+                        <a class="nav-link text-white" href="">Privacy Policy</a>
+                    </div>
+                    <div class="p-2 nav">
+                        <a class="nav-link text-white" href=""><i class="fa-regular fa-copyright"></i> 2020 bike. All rights reserved</a>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 d-flex flex-column justify-content-end align-items-center">
+                    <h5 class="fw-semibold text-white p-2">Get the App</h5>
+                    <img class="w-25 img-fluid p-2" src="images/android.png" alt="">
+                    <img class="w-25 img-fluid p-2" src="images/ios.png" alt="">
+                </div>
+            </div>
+        </section>
+    </footer>
 
     <!-- bootstrap js link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
